--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("https://github.com/Solomonkassa/login/blob/main/animesh-bhargava-dxZMLX7qRGE-unsplash.jpg");
+    background-image: url("background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
