--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@
   }
   .container {
     max-width: 500px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(243, 246, 249, 0.322);
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(220, 224, 229, 0.196)
     animation: fadeIn 0.5s ease-in-out;
   }
   @keyframes fadeIn {
