--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>www.solomon.com</title>
+</head>
+<body>
+    <h1>Welcome to www.solomon.com</h1>
+    <p><a href="{{ url_for('register') }}">Register</a> | <a href="{{ url_for('login') }}">Login</a></p>
+</body>
+</html>
